Bug 620295 - Give SVGAElement objects an href property in JS r=jwatt a=roc